# aurhub

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  go.mod  go.sum  main.go
deploy/: aurhub-indexer.service  aurhub-indexer.timer  aurhubd.service
internal/memdb/: memdb.go
internal/mirror/: mirror.go
internal/rpc/: server.go
internal/srvinfo/: parser.go
src/: generation.cpp  generation.hpp  generation_compare.cpp  indexer.cpp  model.hpp  package_dump.cpp  query_bench.cpp  search.cpp  search.hpp  search_bench.cpp  server.cpp  snapshot.cpp  snapshot.hpp  srcinfo.cpp  srcinfo.hpp
tests/: diagnostics.sh  generation.sh  http_protocol.py  smoke.sh  srcinfo_test.cpp
tools/: integrity_compare.go
